--- a/poc/templates/room.html
+++ b/poc/templates/room.html
@@ -147,12 +147,11 @@
 <script>
     window.jQuery || document.write('<script src="../../assets/js/vendor/jquery.min.js"><\/script>')
 
-    const rawHeaderLen = 16;
+    const rawHeaderLen = 14;
     const packetOffset = 0;
     const headerOffset = 4;
-    const verOffset = 6;
-    const opOffset = 8;
-    const seqOffset = 12;
+    const opOffset = 6;
+    const seqOffset = 10;
 
     var Client = function (options) {
         var MAX_CONNECT_TIMES = 10;
@@ -215,11 +214,10 @@
                 var dataView = new DataView(data, 0);
                 var packetLen = dataView.getInt32(packetOffset);
                 var headerLen = dataView.getInt16(headerOffset);
-                var ver = dataView.getInt16(verOffset);
                 var op = dataView.getInt32(opOffset);
                 var seq = dataView.getInt32(seqOffset);
 
-                console.log("receiveHeader: packetLen=" + packetLen, "headerLen=" + headerLen, "ver=" + ver, "op=" + op, "seq=" + seq);
+                console.log("receiveHeader: packetLen=" + packetLen, "headerLen=" + headerLen, "op=" + op, "seq=" + seq);
 
                 switch (op) {
                     case 8:
@@ -240,18 +238,17 @@
                             // parse
                             var packetLen = dataView.getInt32(offset);
                             var headerLen = dataView.getInt16(offset + headerOffset);
-                            var ver = dataView.getInt16(offset + verOffset);
                             var op = dataView.getInt32(offset + opOffset);
                             var seq = dataView.getInt32(offset + seqOffset);
                             var msgBody = textDecoder.decode(data.slice(offset + headerLen, offset + packetLen));
                             // callback
-                            messageReceived(ver, msgBody);
+                            messageReceived(msgBody);
                             appendMsg(msgBody);
                         }
                         break;
                     default:
                         var msgBody = textDecoder.decode(data.slice(headerLen, packetLen));
-                        messageReceived(ver, msgBody);
+                        messageReceived(msgBody);
                         appendMsg(msgBody);
                         break
                 }
@@ -269,7 +266,6 @@
                 var headerView = new DataView(headerBuf, 0);
                 headerView.setInt32(packetOffset, rawHeaderLen);
                 headerView.setInt16(headerOffset, rawHeaderLen);
-                headerView.setInt16(verOffset, 1);
                 headerView.setInt32(opOffset, 2);
                 headerView.setInt32(seqOffset, 1);
                 ws.send(headerBuf);
@@ -290,17 +286,16 @@
                 var bodyBuf = textEncoder.encode(token);
                 headerView.setInt32(packetOffset, rawHeaderLen + bodyBuf.byteLength);
                 headerView.setInt16(headerOffset, rawHeaderLen);
-                headerView.setInt16(verOffset, 1);
                 headerView.setInt32(opOffset, 7);
                 headerView.setInt32(seqOffset, 1);
                 console.log(token)
                 ws.send(mergeArrayBuffer(headerBuf, bodyBuf));
             }
 
-            function messageReceived(ver, body) {
+            function messageReceived(body) {
                 var notify = self.options.notify;
                 if (notify) notify(body);
-                console.log("messageReceived:", "ver=" + ver, "body=" + body);
+                console.log("messageReceived:", "body=" + body);
             }
 
             function mergeArrayBuffer(ab1, ab2) {
