feat: 調整poc demo

--- a/poc/templates/push.html
+++ b/poc/templates/push.html
@@ -45,14 +45,7 @@
         </div><!--/.container-fluid -->
     </nav>
 
-    {{ if eq .push "tag" }}
-        <select class="browser-default custom-select custom-select-lg mb-3" id="key" name="key">
-            <option selected>選擇要推送的房間標籤</option>
-            {{ range $i, $v := .tag }}
-                <option value="{{ $v }}">{{ $v }}</option>
-            {{ end }}
-        </select>
-    {{ else if eq .push "id" }}
+    {{ if eq .push "id" }}
         <select class="browser-default custom-select custom-select-lg mb-3" id="key" name="key">
             <option selected>選擇要推送的房間號碼</option>
             {{ range $i, $v := .id }}
