--- a/poc/templates/index.html
+++ b/poc/templates/index.html
@@ -48,8 +48,8 @@
 
     <div class="jumbotron">
         <h1>功能說明</h1>
-        <p>1. 單房間推送，根據房間id,分類,標籤</p>
-        <p>2. 多房間推送，根據房間分類,標籤</p>
+        <p>1. 單房間推送，根據房間id</p>
+        <p>2. 多房間推送，根據房間id</p>
         <p>3. 動態新增房間</p>
         <p>4. 沒有歷史紀錄(不保存任何資料)</p>
         <p>5. 顯示線上人數(30秒更新一次)</p>
@@ -68,11 +68,9 @@
                 <dd>{{ .Id }}</dd>
                 <dt>房間分類:</dt>
                 <dd>{{ .Type }}</dd>
-                <dt>房間標籤:</dt>
-                <dd>{{ .Tag }}</dd>
             </dl>
             <p>
-                <a class="btn btn-primary" href="/room/{{ .Id }}/{{ .Type }}/{{ .Tag }}" role="button">進入房間</a>
+                <a class="btn btn-primary" href="/room/{{ .Id }}/{{ .Type }}" role="button">進入房間</a>
             </p>
         </div>
         {{ end }}
