Revert "feat: 移除user mid"
This reverts commit db2e77505584e2b719bb70c4abbe2167205e5c95.

--- a/poc/templates/room.html
+++ b/poc/templates/room.html
@@ -270,7 +270,7 @@
             }
 
             function auth() {
-                var token = '{"key":"{{ .userId }}", "room_id":"{{ .id }}", "platform":"web"}'
+                var token = '{"mid":{{ .userId }}, "room_id":"{{ .id }}", "platform":"web"}'
                 var headerBuf = new ArrayBuffer(rawHeaderLen);
                 var headerView = new DataView(headerBuf, 0);
                 var bodyBuf = textEncoder.encode(token);
