--- a/poc/templates/push.html
+++ b/poc/templates/push.html
@@ -36,7 +36,6 @@
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">推播 <span class="caret"></span></a>
                         <ul class="dropdown-menu">
                             <li><a href="/push/all">全部房間</a></li>
-                            <li><a href="/push/id">單一房間</a></li>
                         </ul>
                     </li>
                 </ul>
@@ -82,7 +81,7 @@
             key = k.value
         }
 
-        $.post('http://'+ "{{ .host }}" + ":" + "{{ .port }}" + '/pushAll', {text: text, key: key , push:"{{ .push }}"}, function (data) {
+        $.post('http://'+ "{{ .host }}" + ":" + "{{ .port }}" + '/pushAll', {text: text}, function (data) {
         }).success(function () { alert("發送成功") })
             .error(function() { alert("發送失敗") });
     }
